--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.3",
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
